--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,8 +1,24 @@
+spring:
+    application:
+        name: cats-market
+
 application:
     price-service:
         base-path: http://localhost:8081
         price: ${application.price-service.base-path}/api/v1/price/validation
 
-spring:
-    application:
-        name: cats-market
+    features:
+        discount:
+            enabled: true
+            value: 0.3
+        price-validation:
+            enabled: false
+
+
+springdoc:
+    swagger-ui:
+        path: /swagger
+    api-docs:
+        path: /api-docs
+
+
