--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,43 @@
 spring:
     application:
         name: cats-market
-
+    jpa:
+        show-sql: true
+        open-in-view: false
+        properties:
+            hibernate:
+                jdbc.time_zone: UTC
+                jdbc.batch_size: 20
+                order_inserts: true
+                order_updates: true
+                query.fail_on_pagination_over_collection_fetch: true
+                query.in_clause_parameter_padding: true
+                connection.provider_disables_autocommit: true
+        hibernate:
+            ddl-auto: none
+    datasource:
+        url: jdbc:postgresql://localhost:5433/ecommerce_db
+        username: postgres
+        password: postgres
+        hikari:
+            auto-commit: false
+            connection-timeout: 30000
+            maximum-pool-size: 10
+            max-lifetime: 1800000
+            pool-name: ecommerce
+    liquibase:
+        change-log: classpath:db/changelog/db.changelog-master.yaml
+        enabled: true
 application:
     price-service:
         base-path: http://localhost:8081
         price: ${application.price-service.base-path}/api/v1/price/validation
-
     features:
         discount:
             enabled: true
             value: 0.3
         price-validation:
             enabled: false
-
 
 springdoc:
     swagger-ui:
